--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "portfolio",
-  "homepage": "https://07bharani.github.io/live9",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://07bharani.github.io/portfolio",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
